--- a/views/list.ejs
+++ b/views/list.ejs
@@ -27,8 +27,8 @@
             <% } %>
 
                 <form action="/" method="post" class="item">
-                    <input type="text" placeholder="New Work" name="" autofocus autocomplete="off">
-                    <button type="submit" name="" value="">+</button>
+                    <input type="text" placeholder="New Work" name="NewItem" autofocus autocomplete="off">
+                    <button type="submit" name="ListType" value=<%=todoDay %>>+</button>
                 </form>
     </div>
 
