--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,21 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="" href="css/styles.css" />
-    <title>ToDo List</title>
-</head>
-
-<body>
-    <div id="heading" class="box">
-        <h1>
-            <%= todoDay %>
-        </h1>
-    </div>
-
+<div id="heading" class="box">
+    <h1>
+        <%= todoDay %>
+    </h1>
+</div>
+<%- include('header'); %>
     <div class="box">
         <% for (let i=0; i< todoList.length; i++) { %>
             <div class="item">
@@ -31,9 +19,4 @@
                     <button type="submit" name="ListType" value=<%=todoDay %>>+</button>
                 </form>
     </div>
-
-
-
-</body>
-
-</html>
+    <%- include('footer'); %>
